# platform.core.appfw.alarm-manager

./: 99-rtc.rules  CMakeLists.txt  Makefile.am  alarm-expire.xml  alarm-lib-stub.c  alarm-lib.c  alarm-manager-registry.c  alarm-manager-schedule.c  alarm-manager-timer.c  alarm-manager.c  alarm-server.manifest  alarm-server_run  alarm-service.conf.in  alarm-service.pc.in  alarm_mgr.xml  alarmmgr_log_dump.sh  configure.ac  control.in  make_openapi.sh  org.tizen.alarm.manager.service.in  project.config
TC/: build.sh  execute.sh  tetbuild.cfg
TC/unit/: Makefile  pkgname.h  tslist  utc_ApplicationFW_alarmmgr_add_alarm_func.c  utc_ApplicationFW_alarmmgr_add_alarm_with_localtime_func.c  utc_ApplicationFW_alarmmgr_create_alarm_func.c  utc_ApplicationFW_alarmmgr_enum_alarm_ids_func.c  utc_ApplicationFW_alarmmgr_free_alarm_func.c  utc_ApplicationFW_alarmmgr_get_info_func.c  utc_ApplicationFW_alarmmgr_get_repeat_mode_func.c  utc_ApplicationFW_alarmmgr_get_time_func.c  utc_ApplicationFW_alarmmgr_get_type_func.c  utc_ApplicationFW_alarmmgr_init_func.c  utc_ApplicationFW_alarmmgr_remove_alarm_func.c  utc_ApplicationFW_alarmmgr_set_cb_func.c  utc_ApplicationFW_alarmmgr_set_repeat_mode_func.c  utc_ApplicationFW_alarmmgr_set_time_func.c  utc_ApplicationFW_alarmmgr_set_type_func.c  utc_MODULE_API_func.c.in
alarm-session-agent/: CMakeLists.txt  agent.c  agent.h
alarm_session_agent/: CMakeLists.txt  agent.c  agent.h
debian/: alarm-server.install.in  alarm-server.postinst  changelog  control  lib-alarm-0.substvars  libalarm-0.install.in  rules
include/: SLP_Alarm_PG.h  alarm-internal.h  alarm.h
packaging/: 60-alarm-manager-rtc.rules  alarm-agent.conf  alarm-manager.changes  alarm-manager.spec  alarm-server.service  alarm-service.conf  alarm-session-agent.service  alarm-session-agent.socket
rules/: 90-alarm-server.rules
src/: CMakeLists.txt  alarm-lib-stub.c  alarm-lib.c
test/: 2alarm_create_test.c  Makefile  alarm_create_test.c  alarm_get_info.c  alarmmgr_unit_ts.c  test._error_case.c  test_delete_alarm.c  test_get_info.c  test_get_list_of_ids.c  test_get_number_of_ids.c  test_redirection_20001.c  test_redirection_20002.c  test_update.c
test/appsvc-test/: Makefile  alarmmgr_add_alarm_appsvc.c  alarmmgr_add_alarm_appsvc_with_localtime.c  alarmmgr_get_info_appsvc.c  delete_alarm_appsvc.c
tool/: CMakeLists.txt  alarmmgr_add_periodic_alarm_withcb.c  alarmmgr_add_reference_periodic_alarm_withcb.c  alarmmgr_get_all_info.c
