PKG_CHECK_MODULES(D_PKGS REQUIRED gio-2.0 glib-2.0 dlog bundle libsystemd-daemon)

FOREACH(flag ${D_PKGS_CFLAGS})
	SET(DAEMON_CFLAGS "${DAEMON_CFLAGS} ${flag}")
ENDFOREACH()

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/include)

SET(TARGET "alarm_session_agent")
SET(SRC
	agent.c
)
ADD_EXECUTABLE(${TARGET} ${SRC})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES
		LINK_FLAGS "-fPIE"
		COMPILE_FLAGS "${DAEMON_CFLAGS}"
)
TARGET_LINK_LIBRARIES(${TARGET} ${PKGS_LDFLAGS} ${D_PKGS_LDFLAGS} -ldl -pie)
INSTALL(TARGETS ${TARGET} DESTINATION bin)

